Fixing issue with z-index: Sort and Filter buttons on the left panel
Former-commit-id: 7665a9e61201c7ce074432db4dd4ad6c6495dadd

--- a/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
+++ b/acm-standard-applications/acm-law-enforcement/src/main/webapp/resources/assets/css/application.css
@@ -383,7 +383,6 @@ span.fancytree-title {
     border-left: 0px;
     border-right: 0px;
     position: relative;
-    z-index: 1001;
 }
 
 .ui-contextmenu {
